# BtScreenLocker

./: .gitignore  BtScreenLocker.desktop  BtScreenLocker_es_US.ts  CMakeLists.txt  LICENSE  README-Español.md  README-Spanish.md  README.md  TODO  bluetoothlistener.cpp  bluetoothlistener.hpp  devicechooser.cpp  devicechooser.ui  logger.cpp  main.cpp  resources.qrc  screenlocker.cpp  screenlocker.hpp
src/: bluetoothlistener.cpp  bluetoothlistener.hpp  connection.cpp  connection.hpp  devicechooser.cpp  devicechooser.hpp  devicechooser.ui  listener.cpp  listener.hpp  logger.cpp  logger.hpp  main.cpp  screenlocker.cpp  screenlocker.hpp
translations/: BtScreenLocker_es_US.qm  BtScreenLocker_es_US.ts
